<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textAlignment="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:letterSpacing="0.1"
                    android:text="@string/app_title"
                    android:textAlignment="center"
                    android:textColor="@color/titleColor"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.Toolbar>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border" />
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/bg_textfield"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/hintUsername"
            android:inputType="text"
            android:letterSpacing="0.03"
            android:maxLines="1"
            android:padding="12dp"
            android:textColorHint="@color/hintColor" />

        <TextView
            android:id="@+id/tvUserError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="Value is incorrect"
            android:textColor="@color/errorColor"
            android:textSize="16sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_textfield"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:letterSpacing="0.05"
            android:maxLines="1"
            android:padding="12dp"
            android:textColorHint="@color/hintColor" />

        <TextView
            android:id="@+id/tvPasswordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="Value is incorrect"
            android:textColor="@color/errorColor"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/btnSignUp"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/btn_primary"
            android:backgroundTint="@color/primaryColor"
            android:fontFamily="sans-serif-black"
            android:letterSpacing="0.1"
            android:text="Sign up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/btnLogin"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.08"
            android:lineHeight="22dp"
            android:text="By signing up, you agree to the Terms of Service and Privacy Policy, including Cookie Use. Others will be able to find you by searching for your email address or phone number when provided."
            android:textAlignment="textStart"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>