<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textAlignment="center">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="@string/app_title"
                        android:textColor="@color/titleColor"
                        android:textSize="20sp" />


                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignEnd="@+id/title"
                        android:gravity="center">

                        <Button
                            android:id="@+id/btnLogout"
                            android:layout_width="70dp"
                            android:layout_height="35dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/btn_logout"
                            android:gravity="center"
                            android:text="@string/btnLogout"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />
                    </RelativeLayout>
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border" />
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/relativeText"
        android:layout_below="@+id/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@id/recyclerView"
        android:background="@color/hintColor" />

    <RelativeLayout
        android:id="@+id/relativeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="5dp">


        <EditText
            android:id="@+id/edChatBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@id/relativeBtn"
            android:background="@drawable/bg_textfield"
            android:fontFamily="sans-serif-medium"
            android:hint="Start a new message"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor"
            android:textSize="16dp" />

        <RelativeLayout
            android:id="@+id/relativeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btnSend"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/btn_logout"
                android:text="@string/btnSend"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>